<resources>
    <string name="app_name">AndroidPuzzleGame</string>
    <string name="title_activity_web">web</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tardado">Well done, it took you</string>
    <string name="seconds">Seconds</string>
    <string name="scores">Scores</string>
    <string name="retry">Retry</string>
    <string name="selector">Level selector</string>
    <string name="calendar">Add in calendar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_puntuacion">Puntuacion</string>
</resources>
