<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Puntuacion">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"/>

    <include layout="@layout/content_puntuacion" />



    <ListView
        android:id="@+id/puntuaciones"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="180dp"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="197dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/niveles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="540dp"
        android:text="@string/selector" />

    <Button
        android:id="@+id/reintentar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="540dp"
        android:text="@string/retry" />

    <Button
        android:id="@+id/calendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="600dp"
        android:text="@string/calendar" />

    <TextView
        android:id="@+id/punt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="130dp"
        android:text="@string/scores" />


    <TextView
        android:id="@+id/punt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/tardado" />


    <TextView
        android:id="@+id/received_value_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="197dp"
        android:layout_marginTop="50dp"
        android:text="@string/seconds"

        />

    <TextView
        android:id="@+id/received_value_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="50dp"
        android:text="@string/seconds"

        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>